@@ -7,6 +7,7 @@ phpMyAdmin - ChangeLog
 - bug #3348995 [config] $cfg['Export']['asfile'] set to false does not select asText option
 - bug #3340151 [export] Working SQL query exports error page
 - bug #3353649 [interface] "Create an index on X columns" form not validated
+- bug #3350790 [interface] JS error in Table->Structure->Index->Edit
 
 3.4.3.1 (2011-07-02)
 - [security] Fixed possible session manipulation in swekey authentication, see PMASA-2011-5
